# vidimus

./: PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
receipts/: ledger-pin-source-hashes.txt  port-diff-append-gate.txt  port-diff-verify-release-chain.txt  sol-pr1-review.md  sol-pr2-review.md
src/receipt/: __init__.py  append_gate.py  attest.py  release_chain.py  sign.py
src/vidimus/: __init__.py  append_gate.py  canonical.py  release_chain.py  sign.py
tests/: test_append_gate_equivalence.py  test_attest.py  test_brier_witness_equivalence.py  test_ledger_equivalence.py  test_package.py  test_sign.py
